# chachi.github.io

./: CNAME  Gemfile  _config.yml  index.html
CV/: index.html
_includes/: content.html  footer.html  header.html  sidebar.html
_layouts/: index.html  post.hml  post.html  toplevel.html
_posts/: 2013-01-01-new-years-resolution.md  2013-02-02-improving-cmake.md  2013-05-14-a-year-of-crossfit.md  2013-05-29-extracurriculars.md  2013-08-28-homebrew-and-library-paths.md  2013-10-21-homebrew-the-missing-package-manager.md  2013-12-18-last-occurences-in-file.md  2014-05-01-file-size-limits.md  2014-05-06-osx-missing-path-handling.md  2014-06-02-ZMQ-PUB-SUB-Compatibility.md  2014-11-12-from-gnome-shell-to-i3wm.md  2014-9-11-CUDA-on-AWS.md  2015-02-23-controlling-apache-with-supervisor.md  2015-04-29-value-properties-for-c++.md  2016-05-27-hello-world-with-ros-and-gazebo.md  2017-11-18-will-robots-take-our-jobs.md  2018-04-13-a-new-adventure.md  2018-04-22-book-review-holocracy.md  2018-05-12-bsw-give-first.md
about/: index.html
context/: index.html
css/: theme.css
posts/: 1.md  2.md  3.md
src/2/: CMakeLists.txt  def_library.cmake
